--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Hash::FieldHash
 
+0.07 Sat Jun  6 08:52:44 2009
+	- pod fix
+	- make from_hash()/to_hash() exportable
+
 0.06 Sat Mar 28 12:30:51 2009
 	- support for named fields
 		- add fieldhash(my %foo => 'foo') syntax as an accessor generator
