--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Hash::FieldHash
 
+0.08 Mon Jun 15 22:45:02 2009
+	- update ppport.h to 3.19
+
 0.07 Sat Jun  6 08:52:44 2009
 	- pod fix
 	- make from_hash()/to_hash() exportable
